samples/_failures_safe/1760960080_d0251a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a6703488.c: In function ‘main’:
./samples/SAFE/__tmp_a6703488.c:138:9: error: expected declaration or statement at end of input
  138 |         return 1;
      |         ^~~~~~
./samples/SAFE/__tmp_a6703488.c:138:9: error: expected declaration or statement at end of input
